# yakkstudios

./: !! READ THIS FIRST !!.md  .cursorrules  .env.example  0001-fix-kill-API-500s-Wren-rewrite.patch  BATCH_FIX_INSTRUCTIONS.md  CHANGELOG-2026-03-28.md  CLAUDE.md  CONTEXT.md  HOME_DEX_BANNER_FIX.md  PROMPT-CLAUDE-BackgroundTasks.md  PROMPT-GEMINI-QA-Audit.md  PUSH_FIXES.sh  SECURITY_AUDIT.md  SITE_HOLD_README.md  Wren.tsx  YAKK-SKILLS.md  capture-test2.txt  constants-wren-icon-fix.md  index.html  manifest.json  middleware.ts  next.config.mjs  package-lock.json  package.json  route (5).ts  stakepoint.js  sw.js  test-capture.txt  vercel.json  yakk-investor-brief.html  yakk-studios-dapp.html
.cursor/: mcp.json
anchor/yakk-otc-desk/: Cargo.toml
anchor/yakk-otc-desk/src/: lib.rs
api/: ai.js  stakepoint.js  stats.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/api/balance/: route.ts
app/buy-yst/: page.tsx
app/locked/: page.tsx
app/news/: page.tsx
app/paused/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
components/: ErrorBoundary.tsx  ForensicView.tsx  GateBadge.tsx  HubTabBar.tsx  MarqueeBanner.tsx  Sidebar.tsx  SolanaProvider.tsx  TickerBar.tsx
discord-bot/: index.js  package.json
lib/: constants.ts  holders.ts  yakk-otc-desk.ts  yakk-swap-service.ts
n8n-workflows/: new-holder-welcome.json  twitter-raid-tracker.json  whale-alert-monitor.json  yst-price-tracker.json
public/: manifest.json  robots.txt  sitemap.xml
scripts/: ollama-mcp-bridge.js
types/: custom-elements.d.ts
x-automation/: index.js  package.json
(+50 files in other folders)
