[package]
name = "yakk-otc-desk"
version = "0.1.0"
description = "YAKK Studios OTC desk for peer-to-peer atomic swaps"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yakk_otc_desk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
